# my-parrot

./: CMakeLists.txt  README.md  main.cpp
frames/: 8.txt
